# PY-24-Point-Generator

./: .gitignore  IMPROVEMENTS.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
src/twenty_four/: __init__.py  __main__.py  cli.py  exceptions.py  generator.py  solver.py
tests/: conftest.py  test_generator.py  test_solver.py
